plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = 17
targetCompatibility = 17

group = 'codesquad'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.13'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClass = 'codesquad.Main'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'codesquad.Main'
        )
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    useJUnitPlatform()
}